# nlp-research-clustering

./: README.md  pyproject.toml
app/: app.py  app_with_cluster.py
notebooks/: eda.ipynb  inference.ipynb  rag.ipynb
output/: X_embedded_all.p  keywords.json  kmeans_model_all.pkl  y_pred_all.p
